--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.14",
     "prettier": "^2.4.1"
   },
