--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@hapi/boom": "^9.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "joi": "^17.4.2"
   }
 }
