--- a/.gitignore
+++ b/.gitignore
@@ -126,4 +126,6 @@ dist
 # Serverless Webpack directories
 .webpack/
 
+### Carpeta de 
+
 # End of https://www.toptal.com/developers/gitignore/api/node
