[imp-postgreSQL] Correccion en configuracion de docker-compose de postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:13
     environment:
       - POSTGRES_DB=my_store
-      - POSTGRES_USER=nico
+      - POSTGRES_USER=lorena
       - POSTGRES_PASSWORD=admin123
     ports:
       - 5432:5432
