[imp-postgreSQL] Configuracion inicial de Sequelize ORM

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:13
     environment:
-      - POSTGRES_DB=my_store
+      - POSTGRES_DB=${PG_DATABASE}
       - POSTGRES_USER=lorena
       - POSTGRES_PASSWORD=admin123
     ports:
