--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,4 +19,23 @@ services:
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
     ports:
       - 5050:80
-      
+  
+  mysql:
+    image: mysql:5
+    environment:
+      - MYSQL_DB=${DB_NAME}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_PORT=${MYSQL_PORT}
+    ports:
+      - 3306:3306
+    volumes:
+      - ./mysql_data:/var/lib/mysql
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - PMA_HOST=mysql
+    ports:
+      - 8080:80
