[imp-postgreSQL] Correcion de typo

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,24 @@
+#Datos API Node
 ENV=
 API_PORT=
-PG_HOST=
-PG_DATABASE=
+
+#Datos BD generales
+DB_NAME=
+DB_HOST=
+
+#Datos Conexion PostgreSQL
 PG_USER=
 PG_PASSWORD=
 PG_PORT=
+
+#Datos Conexion PGadmin
 PGADMIN_MAIL=
-PGADMIN=
+PGADMIN_PASSWORD=
+
+#Datos Conexion MySQL
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_PORT=
+
+#Datos phpMyAdmin
+PMA_HOST=
