[ipm-postgreSQL] Confguracion, implementacion y desarrollo de migraciones de ORM

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:13
     environment:
-      - POSTGRES_DB=${PG_DATABASE}
+      - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${PG_USER}
       - POSTGRES_PASSWORD=${PG_PASSWORD}
     ports:
