--- a/package.json
+++ b/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "my-store",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "lint": "eslint",
-    "migrations:generate": "sequelize-cli migration:generate --name",
-    "migrations:run": "sequelize-cli db:migrate",
-    "migrations:revert": "sequelize-cli db:migrate:undo",
-    "migrations:delete": "sequelize-cli db:migrate:undo:all"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.14",
-    "prettier": "^2.4.1",
-    "sequelize-cli": "^6.3.0"
-  },
-  "dependencies": {
-    "@hapi/boom": "^9.1.4",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "faker": "^5.5.3",
-    "joi": "^17.4.2",
-    "mysql2": "^2.3.3",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.12.0-alpha.1"
-  },
-  "engines": {
-    "node": "16.x"
-  }
+    "name": "my-store",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "start": "node index.js",
+        "lint": "eslint",
+        "migrations:generate": "sequelize-cli migration:generate --name",
+        "migrations:run": "sequelize-cli db:migrate",
+        "migrations:revert": "sequelize-cli db:migrate:undo",
+        "migrations:delete": "sequelize-cli db:migrate:undo:all",
+        "seeds:generate": "sequelize-cli seed:generate --name",
+        "seeds:run": "sequelize-cli db:seed:all",
+        "seeds:undo": "sequelize-cli db:seed:undo"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^8.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.14",
+        "prettier": "^2.4.1",
+        "sequelize-cli": "^6.3.0"
+    },
+    "dependencies": {
+        "@hapi/boom": "^9.1.4",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "faker": "^5.5.3",
+        "joi": "^17.4.2",
+        "mysql2": "^2.3.3",
+        "pg": "^8.7.1",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.12.0-alpha.1"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
