--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "nodemon": "^2.0.14",
-        "prettier": "^2.4.1",
-        "sequelize-cli": "^6.3.0"
+        "prettier": "^2.4.1"
     },
     "dependencies": {
         "@hapi/boom": "^9.1.4",
@@ -36,7 +35,8 @@
         "mysql2": "^2.3.3",
         "pg": "^8.7.1",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.12.0-alpha.1"
+        "sequelize": "^6.12.0-alpha.1",
+        "sequelize-cli": "^6.3.0"
     },
     "engines": {
         "node": "16.x"
